# OvenMediaEngine

./: CLA.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: auto-assign-reviewer.yml  check-docs-build.yml  docker-image-dev-multi.yml  docker-image-release-multi.yml  notify-docs-sync.yml  ome-pr-check.yml
cmake/: Dependencies.cmake  InstallPrerequisites.cmake  README.md
docs/: README.md  alert.md  crossdomains.md  intro.md  logs-and-statistics.md  origin-edge-clustering.md  p2p-delivery.md  performance-tuning.md  preview.sh  push-publishing.md  recording.md  thumbnail.md  troubleshooting.md
docs/access-control/: README.md  _category_.json  admission-webhooks.md  signedpolicy.md
docs/configuration/: README.md  _category_.json  ipv6.md  tls-encryption.md
docs/getting-started/: README.md  _category_.json  getting-started-with-docker.md  getting-started-with-ome-docker-launcher.md
docs/live-source/: README.md  _category_.json  mpeg-2-ts-beta.md  multiplex-channel.md  rtmp.md  rtsp-pull.md  scheduled-channel.md  srt.md  webrtc.md
docs/quick-start/: README.md  _category_.json  test-player.md
docs/rest-api/: README.md  _category_.json
docs/rest-api/v1/: README.md  _category_.json
docs/rest-api/v1/managers/: README.md  _category_.json
docs/rest-api/v1/statistics/: README.md  _category_.json  current.md
docs/rest-api/v1/virtualhost/: README.md  _category_.json  reload-certificate.md
docs/streaming/: README.md  _category_.json  hls.md  low-latency-hls.md  srt.md  webrtc-publishing.md
docs/subtitles/: README.md  _category_.json  realtime-speech-to-text.md
docs/transcoding/: README.md  _category_.json  abr.md  gpu-usage.md  output-profile.md  transcodewebhook.md
misc/: install_nvidia_driver.sh  ome_docker_launcher.sh  ome_launcher.sh  prerequisites.sh
misc/conf_examples/: Edge.xml  Logger.xml  Origin.xml  Server.xml
misc/oven_rtc_tester/: go.mod
misc/stubs/: CMakeLists.txt  libcuda_stub.c
src/core/: utilities.mk
src/projects/base/: common_types.h
src/projects/base/info/: managed_queue.h  media_track.cpp  push.cpp  push.h  record.cpp  record.h  stream.cpp  stream.h  track_set.h
src/projects/base/mediarouter/: media_type.h
src/projects/base/ovlibrary/: clock.h  delay_queue.h  event.cpp  event.h  log.cpp  log.h  log_internal.cpp  log_internal.h  log_write.cpp  log_write.h  precise_timer.cpp  precise_timer.h  queue.h  stop_watch.cpp  stop_watch.h
src/projects/base/ovsocket/: client_socket.cpp  socket.cpp  socket.h  socket_address.cpp  socket_address.h
src/projects/base/provider/: application.cpp  provider.cpp  stream.cpp
src/projects/config/: config_logger_loader.cpp  config_logger_loader.h  config_manager.cpp
src/projects/main/: AMS.mk  CMakeLists.txt  init_utilities.h  main.cpp
src/projects/mediarouter/: mediarouter_application.cpp  mediarouter_nomalize.cpp  mediarouter_stats.cpp  mediarouter_stats.h  mediarouter_stream.cpp  mediarouter_stream.h
src/projects/modules/: CMakeLists.txt
src/projects/modules/containers/mpegts/: mpegts_depacketizer.cpp  mpegts_section.h
src/projects/modules/dtls_srtp/: dtls_transport.cpp  dtls_transport.h
src/projects/modules/ffmpeg/: compat.cpp  compat.h  writer.cpp  writer.h
src/projects/modules/http/server/: http_connection.cpp
src/projects/modules/ice/: CMakeLists.txt  ice_candidate.cpp  ice_candidate_pair.cpp  ice_candidate_pair.h  ice_port.cpp  ice_port.h  ice_port_manager.cpp  ice_port_manager.h  ice_port_observer.h  ice_port_test.cpp  ice_session.cpp  ice_session.h  ice_session_test.cpp  ice_tcp_demultiplexer.cpp  ice_tcp_demultiplexer.h
src/projects/modules/ice/stun/: stun_message.cpp  stun_message.h
src/projects/modules/managed_queue/: managed_queue.h
src/projects/modules/pacer/: AMS.mk  CMakeLists.txt  adaptive_delay_controller.cpp  adaptive_delay_controller.h  frame_pacer.cpp  frame_pacer.h
src/projects/modules/rtc_signalling/: rtc_signalling_server.cpp  rtc_signalling_server.h
src/projects/modules/rtmp/: rtmp_chunk_parser_common.h  rtmp_chunk_parser_helper.h
src/projects/modules/rtmp/chunk/: rtmp_chunk_parser.cpp  rtmp_chunk_parser.h  rtmp_datastructure.h
src/projects/modules/rtmp_v2/: rtmp_private.h
src/projects/modules/rtmp_v2/chunk/: rtmp_chunk_parser.cpp  rtmp_chunk_parser.h
src/projects/modules/rtp_rtcp/: rtp_frame_jitter_buffer.cpp  rtp_frame_jitter_buffer.h  rtp_packetizer_h264.cpp  rtp_packetizer_h264.h  rtp_packetizer_h265.cpp  rtp_packetizer_h265.h  rtp_receive_statistics.cpp  rtp_receive_statistics.h
src/projects/modules/rtp_rtcp/rtcp_info/: rtcp_report_block_generator.cpp  rtcp_report_block_generator.h  rtcp_sr_generator.cpp  rtcp_sr_generator.h  rtcp_transport_cc_feedback_generator.cpp  rtcp_transport_cc_feedback_generator.h
src/projects/modules/rtp_rtcp/rtp_header_extension/: rtp_header_extension_playout_delay.h
src/projects/modules/segment_writer/: writer.cpp
src/projects/modules/whip/: whip_server.cpp  whip_server.h
src/projects/monitoring/: common_metrics.cpp  common_metrics.h  queue_metrics.h
src/projects/orchestrator/: orchestrator.cpp  orchestrator.h  virtual_host.cpp
src/projects/providers/mpegts/: mpegts_provider.cpp  mpegts_provider.h  mpegts_stream.cpp  mpegts_test.cpp
src/projects/providers/multiplex/: multiplex_application.cpp  multiplex_application.h  multiplex_profile.cpp  multiplex_profile.h  multiplex_stream.cpp
src/projects/providers/rtmp/: rtmp_provider.cpp  rtmp_provider.h  rtmp_stream.cpp  rtmp_stream.h  rtmp_stream_v2.cpp  rtmp_test.cpp
src/projects/providers/scheduled/: scheduled_application.cpp  scheduled_application.h
src/projects/providers/srt/: srt_provider.cpp  srt_provider.h
src/projects/providers/webrtc/: webrtc_provider.cpp  webrtc_provider.h  webrtc_stream.cpp  webrtc_stream.h
src/projects/transcoder/: transcoder_alert.h  transcoder_decoder.cpp  transcoder_modules.cpp  transcoder_stream.cpp  transcoder_stream.h  transcoder_stream_internal.cpp  transcoder_stream_internal.h  transcoder_whisper_model_registry.cpp
(+76 files in other folders)
