add_subdirectory(physical_port)
add_subdirectory(http)
add_subdirectory(ice)
add_subdirectory(rtmp)
add_subdirectory(rtmp_v2)
add_subdirectory(json_serdes)
add_subdirectory(dtls_srtp)
add_subdirectory(whip)
add_subdirectory(ovt_packetizer)
add_subdirectory(ffmpeg)
add_subdirectory(address)
add_subdirectory(dump)
add_subdirectory(containers)
add_subdirectory(origin_map_client)
add_subdirectory(cpix_client)
add_subdirectory(transcode_webhook)
add_subdirectory(pacer)
add_subdirectory(rtsp)
add_subdirectory(sdp)
add_subdirectory(rtp_rtcp)
add_subdirectory(access_control)
add_subdirectory(srt)
add_subdirectory(rtc_signalling)
add_subdirectory(segment_writer)
add_subdirectory(managed_queue)
add_subdirectory(bitstream)
